# Smart-Grid-Analytics-System

./: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  HOW_TO_RUN.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  backtest_engine.py  config_manager.py  deploy.bat  deploy.sh  docker-compose.yml  integrated_smart_grid_pipeline.py  main.py  pyproject.toml  requirements.txt  schema_validator.py  setup.py  simplified_config.py  smart_grid_dashboard.py  smart_grid_data_generator.py  test_suite.py
